@@ -942,5 +942,13 @@ was broken in all cases./
     \x{10a}\x{10b}
     \x{10b}\x{10b}
     \x{10b}\x{10a}
+    
+/The next two tests are for property support in non-UTF-8 mode/
+
+/(?:\p{Lu}|\x20)+/
+    \x41\x20\x50\xC2\x54\xC9\x20\x54\x4F\x44\x41\x59
+
+/[\p{Lu}\x20]+/
+    \x41\x20\x50\xC2\x54\xC9\x20\x54\x4F\x44\x41\x59
 
 / End of testinput6 /
